--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "__MSG_ext_extension_name__",
   "description": "__MSG_ext_extension_description__",
-  "version": "7.1.8",
+  "version": "7.2.0",
   "default_locale": "en",
   "permissions": [
     "tabs",
@@ -14,7 +14,6 @@
     "https://*/*",
     "file://*/*",
     "chrome://favicon/*",
-    "https://greatsuspender.github.io/",
     "contextMenus",
     "cookies"
   ],
@@ -49,9 +48,9 @@
     "128": "img/ic_suspendy_128x128.png"
   },
   "web_accessible_resources": ["suspended.html"],
-  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'; child-src 'self'; connect-src 'self' https://raw.githubusercontent.com/StevenBlack/hosts/master/hosts https://greatsuspender.github.io https://www.google-analytics.com www.google-analytics.com https://stats.g.doubleclick.net; img-src 'self' data: chrome: https://www.google-analytics.com www.google-analytics.com https://stats.g.doubleclick.net https://greatsuspender.github.io; style-src 'self' https://greatsuspender.github.io; default-src 'self'",
+  "content_security_policy": "script-src 'self'; object-src 'self'; child-src 'self'; connect-src 'self' https://raw.githubusercontent.com/StevenBlack/hosts/master/hosts; img-src 'self' data: chrome: ; style-src 'self'; default-src 'self'",
   "incognito": "split",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "minimum_chrome_version": "55",
 
   "commands": {
