--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "grunt-crx": "~1.0.5",
     "grunt-string-replace": "^1.3.1",
     "prettier": "1.13.7",
-    "time-grunt": "~1.2.1"
+    "time-grunt": "~1.2.1",
+    "yargs": "^16.2.0"
   },
   "dependencies": {
     "db.js": "^0.15.0"
