--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,7 +38,8 @@ jobs:
       - run: sudo apt-add-repository https://cli.github.com/packages
       - run: sudo apt update
       - run: sudo apt install gh
+      - run: npm install
       - run: npm run generate-key
-      - run: node ./bin/update-version.js do ${{ github.event.inputs.name }}
+      - run: node ./bin/update-version.js do ${{ github.event.inputs.version }}
       - run: npm run build
-      - run: gh release create ${{ github.event.inputs.name }} './build/crx/tgs-${{ github.event.inputs.name }}.crx'
+      - run: gh release create ${{ github.event.inputs.version }} './build/crx/tgs-${{ github.event.inputs.version }}.crx'
