--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -43,4 +43,4 @@ jobs:
       - run: node ./bin/update-version.js do ${{ github.event.inputs.version }}
       - run: npm run build
       - run: echo ${{ secrets.GH_ACCESS_TOKEN }} | gh auth login --with-token
-      - run: gh release create ${{ github.event.inputs.version }} './build/crx/tgs-${{ github.event.inputs.version }}.crx'
+      - run: gh release create ${{ github.event.inputs.version }}
