--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,4 +1,5 @@
 {
+  "manifest_version": 2,
   "name": "__MSG_ext_extension_name__",
   "description": "__MSG_ext_extension_description__",
   "version": "7.2.4",
@@ -69,9 +70,6 @@
   "web_accessible_resources": [
     "suspended.html"
   ],
-  "content_security_policy": "script-src 'self'; object-src 'self'; child-src 'self'; connect-src 'self' https://raw.githubusercontent.com/StevenBlack/hosts/master/hosts; img-src 'self' data: chrome: ; style-src 'self'; default-src 'self'",
-  "incognito": "split",
-  "manifest_version": 2,
   "minimum_chrome_version": "55",
   "commands": {
     "1-suspend-tab": {
@@ -107,5 +105,8 @@
     "6-unsuspend-all-windows": {
       "description": "__MSG_ext_cmd_unsuspend_all_windows_description__"
     }
-  }
+  },
+  "_version": "",
+  "sap.app": {},
+  "sap.ui": {}
 }
